# Arithmetic

./: .gitignore  CMakeLists.txt  CRT_bigint.c  CRT_bigint.h  Complex.c  Complex.h  Euclidean.c  Euclidean.h  FFT.c  FFT.h  Lagrange.c  Lagrange.h  Makefile  README.md  Util.c  Util.h  arithmetic.c  arithmetic.h  artihmetic  main.c  matrix.c  matrix.h  matrixPol  matrix_bigQ_arithmetic.c  matrix_bigQ_arithmetic.h  matrix_bigint_arithmetic.c  matrix_bigint_arithmetic.h  matrix_double.c  matrix_double.h  matrix_pol.c  matrix_pol.h  matrix_pol_double.c  matrix_pol_double.h  pol.c  pol.h  pol_bigQ_arithmetic.c  pol_bigQ_arithmetic.h  pol_bigfloat_arithmetic.c  pol_bigfloat_arithmetic.h  pol_bigint_arithmetic.c  (+17 more)
